<resources>
    <string name="app_name">My Application</string>
    <string name="Dictionary">Słownik</string>
    <string name="Quotes">Cytaty</string>
    <string name="Curiosities">Ciekawostki językowe</string>
    <string name="Biography">Biografie pisarzy</string>
    <string name="Recomended">Polecane książki</string>
    <array name="DictionaryList">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </array>

</resources>
